--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -1,6 +1,5 @@
-@extends('layouts.app')
-
-@section('content')
+{% extends('layouts/auth_default')%}
+{% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
@@ -8,34 +7,34 @@
                 <div class="panel-heading">Login</div>
 
                 <div class="panel-body">
-                    <form class="form-horizontal" method="POST" action="{{ route('login') }}">
+                    <form class="form-horizontal" method="POST" action="login">
                         {{ csrf_field() }}
 
-                        <div class="form-group{{ $errors->has('email') ? ' has-error' : '' }}">
+                        <div class="form-group{{ errors.first('email') ? ' has-error' : '' }}">
                             <label for="email" class="col-md-4 control-label">E-Mail Address</label>
 
                             <div class="col-md-6">
-                                <input id="email" type="email" class="form-control" name="email" value="{{ old('email') }}" required autofocus>
+                                <input id="email" type="email" class="form-control" name="email" value="{{ input_old('email') }}" required autofocus>
 
-                                @if ($errors->has('email'))
+                                {% if errors.first('email')|length > 0 %}
                                     <span class="help-block">
-                                        <strong>{{ $errors->first('email') }}</strong>
+                                        <strong>{{ errors.first('email') }}</strong>
                                     </span>
-                                @endif
+                                {% endif %}
                             </div>
                         </div>
 
-                        <div class="form-group{{ $errors->has('password') ? ' has-error' : '' }}">
+                        <div class="form-group{{ errors.first('password') ? ' has-error' : '' }}">
                             <label for="password" class="col-md-4 control-label">Password</label>
 
                             <div class="col-md-6">
                                 <input id="password" type="password" class="form-control" name="password" required>
 
-                                @if ($errors->has('password'))
+                                {% if errors.first('password')|length > 0 %}
                                     <span class="help-block">
-                                        <strong>{{ $errors->first('password') }}</strong>
+                                        <strong>{{ errors.first('password') }}</strong>
                                     </span>
-                                @endif
+                                {% endif %}
                             </div>
                         </div>
 
@@ -55,7 +54,7 @@
                                     Login
                                 </button>
 
-                                <a class="btn btn-link" href="{{ route('password.request') }}">
+                                <a class="btn btn-link" href="/password/request">
                                     Forgot Your Password?
                                 </a>
                             </div>
@@ -66,4 +65,4 @@
         </div>
     </div>
 </div>
-@endsection
+{% endblock %}
