--- a/resources/views/auth/register.twig
+++ b/resources/views/auth/register.twig
@@ -1,6 +1,5 @@
-@extends('layouts.app')
-
-@section('content')
+{% extends('layouts/auth_default')%}
+{% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
@@ -8,48 +7,48 @@
                 <div class="panel-heading">Register</div>
 
                 <div class="panel-body">
-                    <form class="form-horizontal" method="POST" action="{{ route('register') }}">
+                    <form class="form-horizontal" method="POST" action="/register">
                         {{ csrf_field() }}
 
-                        <div class="form-group{{ $errors->has('name') ? ' has-error' : '' }}">
+                        <div class="form-group{{ errors.first('name') ? ' has-error' : '' }}">
                             <label for="name" class="col-md-4 control-label">Name</label>
 
                             <div class="col-md-6">
                                 <input id="name" type="text" class="form-control" name="name" value="{{ old('name') }}" required autofocus>
 
-                                @if ($errors->has('name'))
+                                {% if errors.first('name') %}
                                     <span class="help-block">
-                                        <strong>{{ $errors->first('name') }}</strong>
+                                        <strong>{{ errors.first('name') }}</strong>
                                     </span>
-                                @endif
+                                {% endif %}
                             </div>
                         </div>
 
-                        <div class="form-group{{ $errors->has('email') ? ' has-error' : '' }}">
+                        <div class="form-group{{ errors.first('email') ? ' has-error' : '' }}">
                             <label for="email" class="col-md-4 control-label">E-Mail Address</label>
 
                             <div class="col-md-6">
                                 <input id="email" type="email" class="form-control" name="email" value="{{ old('email') }}" required>
 
-                                @if ($errors->has('email'))
+                                {%if errors.first('email') %}
                                     <span class="help-block">
-                                        <strong>{{ $errors->first('email') }}</strong>
+                                        <strong>{{ errors.first('email') }}</strong>
                                     </span>
-                                @endif
+                                {% endif %}
                             </div>
                         </div>
 
-                        <div class="form-group{{ $errors->has('password') ? ' has-error' : '' }}">
+                        <div class="form-group{{ errors.first('password') ? ' has-error' : '' }}">
                             <label for="password" class="col-md-4 control-label">Password</label>
 
                             <div class="col-md-6">
                                 <input id="password" type="password" class="form-control" name="password" required>
 
-                                @if ($errors->has('password'))
+                                {% if errors.first('password') %}
                                     <span class="help-block">
-                                        <strong>{{ $errors->first('password') }}</strong>
+                                        <strong>{{ errors.first('password') }}</strong>
                                     </span>
-                                @endif
+                                {% endif %}
                             </div>
                         </div>
 
@@ -74,4 +73,4 @@
         </div>
     </div>
 </div>
-@endsection
+{% endblock %}
