--- a/resources/views/posts/show.twig
+++ b/resources/views/posts/show.twig
@@ -17,7 +17,8 @@
 </p>
 <form action="/posts/{{ post.id}}/comments" method="post">
 {{ csrf_field() }}
-    <input type="text" name="body" placeholder="enter comment">
+    <input type="text" name="body" placeholder="enter comment" required>
+    <input type="hidden" name="post_id" value="{{ post.id }}">
     <input type="submit" value="add comment">
 </form>
 {% endblock %}
